--- a/app/views/layouts/partials/_sign_in.html.erb
+++ b/app/views/layouts/partials/_sign_in.html.erb
@@ -35,7 +35,7 @@
                 <label>Or</label>
               </div>
               <div class="d-grid mb-2">
-                <a class="btn btn-google btn-login fw-bold" href="<%= user_google_oauth2_omniauth_authorize_path %>">
+                <a class="btn btn-google btn-login fw-bold" href="<%= user_google_oauth2_omniauth_authorize_path %>" data-turbo="false">
                   <i class="fab fa-google me-2"></i> Sign in with Google
                 </a>
               </div>
@@ -48,6 +48,7 @@
                 <label>Not a member? <a class="text-decoration-none cursor-pointer text-right">Create a account</a></label>                              
               </div>
             </form>
+
       </div>
     </div>
   </div>
