--- a/app/views/layouts/partials/_comment.html.erb
+++ b/app/views/layouts/partials/_comment.html.erb
@@ -20,7 +20,7 @@
                 </label>
             </div>
             <div class="row">
-                <label><%= comment.created_at.strftime('%d-%m-%Y %I:%M:%S %p') %></label>
+                <label class="font-size-0-9-rem" ><%= comment.created_at.strftime('%d-%m-%Y %I:%M:%S %p') %></label>
             </div>
             <div class="row">
                 <label><%= comment.content %></label>
