--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -221,7 +221,7 @@
                                 <% end %>                                                             
                                 </div>
                                 <div class="mx-auto col-6 d-grid">
-                                    <button class="btn btn-success btn-lg" id="add-to-cart" disabled>Add To Cart</button>
+                                    <button class="btn btn-success btn-lg" id="add-to-cart" disabled onclick="add_to_cart('<%= @product.id %>')">Add To Cart</button>
                                 </div>
                             </div>
                         </form>
