--- a/app/views/layouts/partials/_cart_item.html.erb
+++ b/app/views/layouts/partials/_cart_item.html.erb
@@ -1,17 +1,19 @@
-<div id="cart-item-<%= item.inventory_id %>" class="row px-3">
-    <div class="col-md-3">
-        <img class="item-cart-img mb-2" src="<%= item.inventory.color_url %>" alt="<%= item.inventory.product.product_name %>" />
+<li onclick="open_dropdown(event)">
+    <div id="cart-item-<%= item.inventory_id %>" class="row px-3">
+        <div class="col-md-3">
+            <img class="item-cart-img mb-2" src="<%= item.inventory.color_url %>" alt="<%= item.inventory.product.product_name %>" />
+        </div>
+        <div class="col-md-7 my-auto">
+            <span class="text-dark d-block font-size-1-1-rem"><%= item.inventory.product.product_name %> size <%= item.inventory.size %></span>
+            <span class="text-success font-size-0-9-rem">$<%= item.inventory.product.sell_price * (1 - item.inventory.product.product_discount / 100) %>                 
+                <% unless item.inventory.product.product_discount == 0 %>
+                    &nbsp;&nbsp;&nbsp;<s class="text-muted">$<%= item.inventory.product.sell_price %></s>
+                <% end %>
+            </span>
+            <span id="cart-item-quantity-<%= item.inventory_id %>" class="text-muted mx-3 font-size-0-9-rem">Quantity: <%= item.quantity %></span>
+        </div>
+        <div class="col-md-2 my-auto">
+            <button class="btn btn-danger" type="button" onclick="remove_from_cart('<%= item.inventory.product_id %>', '<%= item.inventory.size %>', '<%= item.inventory.color_url %>')"><i class="fa faw fa-trash-alt text-white"></i></button>
+        </div>
     </div>
-    <div class="col-md-7">
-        <span class="text-dark d-block font-size-1-1-rem"><%= item.inventory.product.product_name %> size <%= item.inventory.size %></span>
-        <span class="text-success font-size-0-9-rem">$<%= item.inventory.product.sell_price * (1 - item.inventory.product.product_discount / 100) %>                 
-            <% unless item.inventory.product.product_discount == 0 %>
-                &nbsp;&nbsp;&nbsp;<s class="text-muted">$<%= item.inventory.product.sell_price %></s>
-            <% end %>
-        </span>
-        <span id="cart-item-quantity-<%= item.inventory_id %>" class="text-muted mx-3 font-size-0-9-rem">Quantity: <%= item.quantity %></span>
-    </div>
-    <div class="col-md-2">
-        <a class="btn btn-danger" onclick="remove_from_cart('<%= item.inventory.product_id %>', '<%= item.inventory.size %>', '<%= item.inventory.color_url %>')"><i class="fa faw fa-trash-alt text-white"></i></a>
-    </div>
-</div>
+</li>
