--- a/app/views/layouts/partials/_header.html.erb
+++ b/app/views/layouts/partials/_header.html.erb
@@ -40,29 +40,37 @@
                 <a class="nav-icon d-none d-lg-inline" href="#" data-bs-toggle="modal" data-bs-target="#templatemo_search">
                     <i class="fa fa-fw fa-search text-dark mr-2"></i>
                 </a>
-                <a class="nav-icon position-relative text-decoration-none" href="#">
-                    <i class="fa fa-fw fa-heart text-dark mr-1"></i>
-                    <span id="favorite" class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark"><%= session[:count_favorite] %></span>
-                </a>
+
                 <% if user_signed_in? %>
                     <div class="dropdown">
-                        <a class="nav-icon position-relative text-decoration-none cursor-pointer" role="button" id="dropdownMenuCart" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-icon position-relative text-decoration-none" role="button" id="dropdownMenuFavorite" data-bs-toggle="dropdown">
+                            <i class="fa fa-fw fa-heart text-dark mr-1"></i>
+                            <span id="count-favorite" class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark"><%= session[:count_favorite] %></span>
+                        </a>
+                        <%= render partial: 'layouts/partials/favorite' %>
+                    </div>
+                    <div class="dropdown">
+                        <a class="nav-icon position-relative text-decoration-none cursor-pointer" role="button" id="dropdownMenuCart" data-bs-toggle="dropdown">
                             <i class="fa fa-fw fa-cart-arrow-down text-dark mr-3"></i>
                             <span id="count-cart" class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark"><%= session[:count_cart] %></span>
                         </a>
                         <%= render partial: 'layouts/partials/cart', locals: {is_cart_empty: @is_cart_empty} %>
                     </div>
                     <div class="dropdown">
-                        <a class="nav-icon position-relative text-decoration-none cursor-pointer dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-icon position-relative text-decoration-none cursor-pointer dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown">
                             <i class="fa fa-fw fa-user text-success mr-3"></i>
                             <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark"></span>
                         </a>
-                        <ul id="dropdownMenuLink-menu" class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                        <ul id="dropdownMenuLink-menu" class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">Personal infomation</a></li>
                             <li><a class="dropdown-item" href="<%= destroy_user_session_path %>">Sign out</a></li>
                         </ul>
                     </div>          
                 <% else %>
+                    <a class="nav-icon position-relative text-decoration-none cursor-pointer" onclick="open_sign_in()">
+                        <i class="fa fa-fw fa-heart text-dark mr-1"></i>
+                        <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark"></span>
+                    </a>
                     <a class="nav-icon position-relative text-decoration-none cursor-pointer" onclick="open_sign_in()">
                         <i class="fa fa-fw fa-cart-arrow-down text-dark mr-3"></i>
                         <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark"></span>
