--- a/app/views/layouts/partials/_cart.html.erb
+++ b/app/views/layouts/partials/_cart.html.erb
@@ -17,7 +17,7 @@
         <% else %>
             <hr class="text-success my-0 mb-2" />
             <div class="text-center">
-                <a type="button" href="<%= checkout_index_path %>" class="btn btn-success text-white">Checkout</a>
+                <a type="button" href="/checkout" class="btn btn-success text-white">Checkout</a>
             </div>
         <% end %>   
     </div>
